fixed some more find bugs warnings